codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_shell_command_absorbs_bang.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭ Shell ───────────────────────────────────────────────────────────────────────────────────────────╮"
"┃ ! git status                                                                                     │"
"┃                                                                                                  │"
"┃                                                                                                  │"
"┃                                                                                                  │"
"┃                                                                                                  │"
"┃                                                                                                  │"
"╰ ! shell command ─────────────────────────────────────────────────────────────────────────────────╯"
"  gpt-5.4 high fast · ~/code/codex-1 · Context used 0%                                  Shell mode  "
