codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__image_placeholder_chip_style.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: "buf[(2, 1)].style()"
---
Style::new().magenta().bg(Color::Reset).underline_color(Color::Reset).bold()
