codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__large.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"┃ › [Pasted Content 1005 chars]                                                                    │"
"┃                                                                                                  │"
"┃                                                                                                  │"
"┃                                                                                                  │"
"┃                                                                                                  │"
"┃                                                                                                  │"
"┃                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                 100% context left  "
