codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__light_terminal_palette_composer.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: "format!(\"{buffer:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 6 },
    content: [
        "╭──────────────────────────────────────────────╮",
        "┃ › Ask Codex to do anything                   │",
        "┃                                              │",
        "┃                                              │",
        "╰ ctrl + t transcript ─────────────────────────╯",
        "  ? shortcuts                100% context left  ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(132, 0, 120), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 0, fg: Rgb(221, 221, 220), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(132, 0, 120), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: Reset, bg: Rgb(245, 245, 245), underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Rgb(132, 0, 120), bg: Rgb(245, 245, 245), underline: Reset, modifier: BOLD,
        x: 3, y: 1, fg: Reset, bg: Rgb(245, 245, 245), underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: Rgb(136, 137, 134), bg: Rgb(245, 245, 245), underline: Reset, modifier: NONE,
        x: 28, y: 1, fg: Reset, bg: Rgb(245, 245, 245), underline: Reset, modifier: NONE,
        x: 47, y: 1, fg: Rgb(221, 221, 220), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(132, 0, 120), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 2, fg: Reset, bg: Rgb(245, 245, 245), underline: Reset, modifier: NONE,
        x: 47, y: 2, fg: Rgb(221, 221, 220), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Rgb(132, 0, 120), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 3, fg: Reset, bg: Rgb(245, 245, 245), underline: Reset, modifier: NONE,
        x: 47, y: 3, fg: Rgb(221, 221, 220), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Rgb(132, 0, 120), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 4, fg: Rgb(136, 137, 134), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 4, fg: Rgb(221, 221, 220), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 46, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
